--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,6 +27,7 @@
     /*font weight */
     --font-medium: 500;
     --font-semibold: 600;
+    --font-big: 700;
     
     /* z-index */
     --z-tooltip: 10;
@@ -217,6 +218,7 @@ img{
 /*home*/
 .home__about{
     font-size: 1rem;
+    text-align: justify;
 }
 .home__container{
     position: relative;
@@ -228,27 +230,27 @@ img{
     text-align: center;
 }
 
-.home__greeting,
-.home__education{
-    font-size: var(--small-font-size);
-    font-weight: var(--font-medium);
+.home__name{
+    font-size: 3rem;
+    font-weight: 700;
+    
 }
 
 .home__greeting{
     display: block;
     color: #000000;
     margin-bottom: .25rem;
-    font-size: var(--big-font-size);
+    font-weight: 700;
+    font-size: 5rem;
 }
 
 .home__education{
     color: #000000;
     margin-bottom: 2.5rem;
+    text-align: justify;
+    
 }
 
-.home__name{
-    font-size: var(--biggest-font-size);
-}
 
 .home__img{
     width: 250px;
@@ -280,7 +282,55 @@ img{
     display: grid;
     row-gap: .5rem
 }
+.name__gradient{
+    background-size: 300% 300%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    background-color: #FE5A59;
+    background-image: linear-gradient(45deg, #2c3e50 40%, #EA2027 50%, #009432 75%, #2c3e50 100%);
+    -webkit-animation: gradient 4s ease infinite;
+    animation: gradient 4s ease infinite;
+}
+.first-word-gradient {
+    background-size: 300% 300%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    background-color: #FB408F;
+    background-image: linear-gradient(45deg, #2c3e50 40%, #9980FA 60%, #f1c40f 75%, #2c3e50 100%);
+    -webkit-animation: gradient 4s ease infinite;
+    animation: gradient 4s ease infinite;
+}
+@-webkit-keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
 
+    50% {
+      background-position: 100% 50%;
+    }
+
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+
+  @keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+    background-position: 100% 50%;
+    }
+
+    100% {
+    background-position: 0% 50%;
+    }
+  }
 .home__social-link{
     width: max-content;
     background-color: var(--container-color);
@@ -781,7 +831,7 @@ body.light-theme{
         margin-right: auto;
     }
     .section{
-        padding: 6.5rem 0 1rem;
+        padding: 3rem 0 1rem;
     }
     .section__title{
         margin-bottom: 3.5rem;
@@ -795,8 +845,8 @@ body.light-theme{
         height: 400px;
     }
     .home__img{
-        width: 200px;
-        height: 250px;
+        width: 290px;
+        height: 400px;
     }
     .home__social-link{
         padding: .4rem;
